Finish changing images

--- a/app/views/pages/_services.html.erb
+++ b/app/views/pages/_services.html.erb
@@ -2,7 +2,7 @@
 <div class="container">
   <div class="row">
     <div class="col-12 col-md-6">
-      <img src="https://images.unsplash.com/photo-1464295440335-ee082a75ccca?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2850&q=80" alt="">
+      <img src="https://images.unsplash.com/photo-1558904541-efa843a96f01?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=2978&q=80" alt="">
     </div>
     <div class="col-12 col-md-6 d-flex align-items-center justify-content-center">
       <div class="py-4 py-md-0 text-center text-md-left">
@@ -35,7 +35,7 @@
   </div>
   <div class="row flex-row-reverse">
     <div class="col-12 col-md-6">
-      <img src="https://images.unsplash.com/photo-1474767821094-a8fe9d8c8fdd?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2850&q=80" alt="">
+      <img src="https://res.cloudinary.com/dmbom1kyl/image/upload/c_scale,w_1006/v1606740437/NIBERMA-Pinturas-y-resinas-para-suelos_uqme1w.jpg" alt="">
     </div>
     <div class="col-12 col-md-6 d-flex align-items-center justify-content-center">
       <div class="py-4 py-md-0 text-center text-md-left">
