--- a/app/views/pages/_sponsors.html.erb
+++ b/app/views/pages/_sponsors.html.erb
@@ -20,14 +20,14 @@
           <div class="d-flex justify-content-center">
             <img src="https://res.cloudinary.com/dmbom1kyl/image/upload/v1605134859/CthghMI3vbG737TN07NNtBtL5rpSyz5WeEX59ZIi0HLZLA0SAUzJ9FVkusdKaTjCOTw6mrpTsQ80ZUAjSR9sCwGnc7Orqw6dYYVOUvHT6Hcw_ks5udl.jpg" alt="...">
             <img src="https://res.cloudinary.com/dmbom1kyl/image/upload/v1605134987/fvmx11dt8empuxszllbr.jpg" alt="">
-            <img src="https://img1.freepng.es/20180417/jve/kisspng-t-shirt-hoodie-champion-brand-clothing-cars-logo-brands-5ad6ae88e431e0.8768680715240188249347.jpg" alt="">
-            <img src="https://img1.freepng.es/20180417/jve/kisspng-t-shirt-hoodie-champion-brand-clothing-cars-logo-brands-5ad6ae88e431e0.8768680715240188249347.jpg" alt="">
+            <img class="bg-dark" src="https://res.cloudinary.com/dmbom1kyl/image/upload/v1606740434/Los_Tipales_gx36vh.png" alt="los_tipales">
+            <img class="bg-dark" src="https://res.cloudinary.com/dmbom1kyl/image/upload/v1606740434/Las_Victorias_qrrh7y.png" alt="las_victorias">
           </div>
         </div>
         <div class="carousel-item">
           <div class="d-flex justify-content-center">
-            <img src="https://img1.freepng.es/20180417/jve/kisspng-t-shirt-hoodie-champion-brand-clothing-cars-logo-brands-5ad6ae88e431e0.8768680715240188249347.jpg" alt="">
-            <img src="https://img1.freepng.es/20180417/jve/kisspng-t-shirt-hoodie-champion-brand-clothing-cars-logo-brands-5ad6ae88e431e0.8768680715240188249347.jpg" alt="">
+            <img class="bg-white" src="https://res.cloudinary.com/dmbom1kyl/image/upload/v1606742054/quillmes_azoy7c.png" alt="quilmes">
+            <img class="bg-dark" src="https://res.cloudinary.com/dmbom1kyl/image/upload/v1606740434/Las_Rosas_vk2itu.png" alt="las_rosas">
           </div>
         </div>
       </div>
@@ -47,6 +47,8 @@
         <li data-target="#carouselMobile" data-slide-to="0" class="active"></li>
         <li data-target="#carouselMobile" data-slide-to="1"></li>
         <li data-target="#carouselMobile" data-slide-to="2"></li>
+        <li data-target="#carouselMobile" data-slide-to="3"></li>
+        <li data-target="#carouselMobile" data-slide-to="4"></li>
       </ol>
       <div class="carousel-inner">
         <div class="carousel-item active">
@@ -67,12 +69,24 @@
             <img src="https://res.cloudinary.com/dmbom1kyl/image/upload/c_scale,w_190/v1605134506/belgrano_gcebat.jpg" alt="belgrano-cargas">
           </div>
         </div>
+        <div class="carousel-item">
+          <div class="d-flex justify-content-center">
+            <img class="bg-dark" src="https://res.cloudinary.com/dmbom1kyl/image/upload/v1606740434/Los_Tipales_gx36vh.png" alt="los_tipales">
+            <img class="bg-dark" src="https://res.cloudinary.com/dmbom1kyl/image/upload/v1606740434/Las_Victorias_qrrh7y.png" alt="las_victorias">
+          </div>
+        </div>
+        <div class="carousel-item">
+          <div class="d-flex justify-content-center">
+            <img class="bg-white" src="https://res.cloudinary.com/dmbom1kyl/image/upload/v1606742054/quillmes_azoy7c.png" alt="quilmes">
+            <img class="bg-dark" src="https://res.cloudinary.com/dmbom1kyl/image/upload/v1606740434/Las_Rosas_vk2itu.png" alt="las_rosas">
+          </div>
+        </div>
       </div>
-      <a class="carousel-control-prev" href="#carouselMobile" role="button" data-slide="prev">
+      <a class="carousel-control-prev d-none" href="#carouselMobile" role="button" data-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
         <span class="sr-only">Previous</span>
       </a>
-      <a class="carousel-control-next" href="#carouselMobile" role="button" data-slide="next">
+      <a class="carousel-control-next d-none" href="#carouselMobile" role="button" data-slide="next">
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="sr-only">Next</span>
       </a>
