--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -17,11 +17,10 @@
 
 #sponsors {
   img {
-    padding: 10px;
     width: 200px;
     height: 180px;
     object-fit: cover;
-    margin-right: 10px;
+    margin-right: 24px;
   }
 }
 
@@ -49,16 +48,15 @@
   }
 
   #sponsors {
-  img {
-    padding: 5px;
-    width: 170px;
-    height: 140px;
-    object-fit: cover;
-    margin-right: 10px;
+    img {
+      padding: 5px;
+      width: 170px;
+      height: 140px;
+      object-fit: cover;
+      margin-right: 10px;
+    }
   }
 }
-}
-
 
 @media(max-width: 575px) {
 
@@ -96,12 +94,24 @@
   }
 
   #carousel {
-  .carousel {
-    img {
-      width: 100%;
-      height: 520px;
-      object-fit: cover;
+    .carousel {
+      img {
+        width: 100%;
+        height: 520px;
+        object-fit: cover;
+      }
     }
   }
 }
+
+@media(max-width: 350px) {
+  #sponsors {
+    img {
+      padding: 5px;
+      width: 140px;
+      height: 120px;
+      object-fit: cover;
+      margin-right: 10px;
+    }
+  }
 }
