--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,9 +1,9 @@
 <% if user_signed_in? %>
-<div class="p-5">
-  <%= link_to 'Crear noticias', new_post_path, class: "btn btn-primary btn-block"  %>
+<div class="mt-6 p-5">
+  <%= link_to 'Crear novedades', new_post_path, class: "btn btn-primary btn-block"  %>
 </div>
 <% end %>
-<h2 class="py-5 text-center mt-6" id="page-title">Noticias</h2>
+<h2 class="py-5 text-center mt-6" id="page-title">Novedades</h2>
 <div class="container post-container">
   <% @posts.each do |post| %>
   <%= render 'shared/cards', post: post %>
