--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -17,7 +17,7 @@
         <%= link_to "Clientes", root_path( anchor: "sponsors"), class: "nav-link" %>
       </li>
       <li class="nav-item active">
-        <%= link_to "Noticias", posts_path, class: "nav-link" %>
+        <%= link_to "Novedades", posts_path, class: "nav-link" %>
       </li>
       <li class="nav-item active">
         <%= link_to "Obras", root_path( anchor: "carousel"), class: "nav-link" %>
