--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,7 +1,7 @@
 <% if user_signed_in? %>
 <div class="p-5 mt-6">
-  <%= link_to 'Editar Noticia', edit_post_path(@post), class: "btn btn-dark btn-block mb-3"  %>
-  <%= link_to 'Destruir Noticia', @post, method: :delete, data: { confirm: 'Estas seguro de eliminar la noticia' } , class: 'btn btn-danger btn-block' %>
+  <%= link_to 'Editar Novedad', edit_post_path(@post), class: "btn btn-dark btn-block mb-3"  %>
+  <%= link_to 'Destruir Novedad', @post, method: :delete, data: { confirm: 'Estas seguro de eliminar la noticia' } , class: 'btn btn-danger btn-block' %>
 </div>
 <% end %>
 <div class="container py-5 text-center mt-6">
