Add photos to services

--- a/app/views/pages/_services.html.erb
+++ b/app/views/pages/_services.html.erb
@@ -24,7 +24,7 @@
   </div>
   <div class="row">
     <div class="col-12 col-md-6">
-      <img src="https://images.unsplash.com/photo-1421940943431-d392fcc1079f?ixlib=rb-1.2.1&auto=format&fit=crop&w=1567&q=80" alt="">
+      <img src="https://res.cloudinary.com/dmbom1kyl/image/upload/v1606851119/barrido-calles_lgi7di.jpg" alt="">
     </div>
     <div class="col-12 col-md-6 d-flex align-items-center justify-content-center">
       <div class="py-4 py-md-0 text-center text-md-left">
