Add cloudinary photos

--- a/app/views/pages/_sponsors.html.erb
+++ b/app/views/pages/_sponsors.html.erb
@@ -10,7 +10,7 @@
       <div class="carousel-inner">
         <div class="carousel-item active">
           <div class="d-flex justify-content-center">
-            <img src="https://media-exp1.licdn.com/dms/image/C4E0BAQHrEdGuZWTMSg/company-logo_200_200/0?e=2159024400&v=beta&t=0zcCsyhFQCCqXL5ZkBzKmvOCz7forNgmT2QPyI-2S2A" alt="di-bacco">
+            <img src="https://res.cloudinary.com/dmbom1kyl/image/upload/v1606851467/0_uv3fwz.jpg" alt="di-bacco">
             <img src="https://res.cloudinary.com/dmbom1kyl/image/upload/v1605134286/0_hnqgqz.png" alt="cencosud">
             <img src="https://res.cloudinary.com/dmbom1kyl/image/upload/c_scale,w_231/v1605134349/rmTlFwDq-9O5bLqtlv2BnYXaq2y9vKhbdOlae0QJ9HQgCMUF6Bvj3YSBoXja2dn6zhue0n4sMr4ye0dGF79whEb1BQ_s7ei2o.jpg" alt="grupo-bca">
             <img src="https://res.cloudinary.com/dmbom1kyl/image/upload/c_scale,w_190/v1605134506/belgrano_gcebat.jpg" alt="belgrano-cargas">
@@ -53,7 +53,7 @@
       <div class="carousel-inner">
         <div class="carousel-item active">
           <div class="d-flex justify-content-center">
-            <img src="https://media-exp1.licdn.com/dms/image/C4E0BAQHrEdGuZWTMSg/company-logo_200_200/0?e=2159024400&v=beta&t=0zcCsyhFQCCqXL5ZkBzKmvOCz7forNgmT2QPyI-2S2A" alt="di-bacco">
+            <img src="https://res.cloudinary.com/dmbom1kyl/image/upload/v1606851467/0_uv3fwz.jpg" alt="di-bacco">
             <img src="https://res.cloudinary.com/dmbom1kyl/image/upload/v1605134286/0_hnqgqz.png" alt="cencosud">
           </div>
         </div>
