--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
-<div class="main-banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://images.unsplash.com/photo-1559721849-947ab8ad1ced?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2850&q=80);">
+<div class="main-banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://res.cloudinary.com/dmbom1kyl/image/upload/c_fill,w_2076/v1606851210/photo-1559721849-947ab8ad1ced_ms5m3k.jpg);">
   <div class="container text-center">
     <img src="https://res.cloudinary.com/san-patricio/image/upload/c_scale,w_920/v1603753433/Logo_Garbo_Negativo_f3nack.png" alt="">
     <div class="d-flex justify-content-center banner-btn">
