--- a/app/views/contacts/_new.html.erb
+++ b/app/views/contacts/_new.html.erb
@@ -31,7 +31,7 @@
     </div>
     <div>
       <i class="fab fa-whatsapp h2"></i>
-      <p class="mb-1" type="button" data-toggle="modal" data-target="#phoneModal"> 381-5342477 || 381-5056132</p>
+      <p style="cursor: pointer;" class="mb-1" type="link" data-toggle="modal" data-target="#phoneModal"> 381-5342477 || 381-5056132</p>
     </div>
   </div>
 </div>
