--- a/app/views/pages/_company.html.erb
+++ b/app/views/pages/_company.html.erb
@@ -2,7 +2,7 @@
   <h2 class="text-center pt-5 pt-md-6 pb-5" id="page-title">La Empresa</h2>
   <div class="px-4 px-lg-8 pb-6 container">
     <p>
-      <strong>GARBO S.A.S.</strong>  es una empresa dedicada a los servicios de espacios verdes, podas, pinturas y pisos industriales, limpieza y fumigación.<br>Contamos con profesionales capacitados y maquinaria de última tecnología, lo cual nos permite brindar soluciones integrales a nuestros clientes con un alto grado de calidad en los servicios.<br>Creemos que la seriedad y el compromiso con los proyectos que tomamos son las claves del continuo crecimiento de la empresa. Sobre esa línea caminamos y pretendemos seguir dando pasos en esa dirección para la sostenibilidad en el largo plazo.
+      <strong>GARBO S.A.S.</strong>  es una empresa dedicada a los servicios de espacios verdes, podas, pinturas y pisos industriales, limpieza y fumigación.<br>Contamos con profesionales capacitados y maquinaria de última tecnología, lo cual nos permite brindar soluciones integrales a nuestros clientes con un alto grado de calidad en los servicios.<br>Creemos que la seriedad y el compromiso con los proyectos que tomamos son las claves del continuo crecimiento que ha experimentado nuestra empresa. Sobre esa línea nos movemos y pretendemos seguir dando pasos en esa dirección para la sostenibilidad en el largo plazo.
     </p>
   </div>
 </div>
