--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>GarboServices</title>
+    <title>GARBO servicios integrales</title>
+    <%= favicon_link_tag(source = "garbo-2.png") %>
+    <meta name="title" content="GARBO - SERVICIOS INTEGRALES">
+    <meta name="description" content="GARBO S.A.S es una empresa dedicada a los servicios de espacios verdes, podas, pinturas y pisos industriales, limpieza y fumigación.">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload', defer: true %>
   </head>
-
   <body>
     <%= render 'shared/navbar' %>
     <%= render 'shared/flashes' %>
