Change footer content

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -16,7 +16,7 @@
     <% else %>
     <div class="text-center text-md-left d-md-flex justify-content-between">
       <p><i class="far fa-copyright h6"></i> 2020 - <%= link_to 'GARBO', new_user_session_path  %> Todos los derechos reservados</p>
-      <p class="pt-2 pt-md-0">Made by <strong> <%= link_to 'GV', 'http://www.guillermo-varela.com', target: "_blank", rel: "nofollow"  %></strong></p>
+      <p class="pt-2 pt-md-0">Made by <strong> <%= link_to 'GV', 'http://www.gvweb.ar', target: "_blank", rel: "nofollow"  %></strong></p>
     </div>
     <% end %>
   </div>
