--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>GARBO servicios integrales</title>
+    <title>GARBO Servicios Integrales</title>
     <%= favicon_link_tag(source = "garbo-2.png") %>
     <meta name="title" content="GARBO - SERVICIOS INTEGRALES">
     <meta name="description" content="GARBO S.A.S es una empresa dedicada a los servicios de espacios verdes, podas, pinturas y pisos industriales, limpieza y fumigación.">
