--- a/app/views/pages/_services.html.erb
+++ b/app/views/pages/_services.html.erb
@@ -7,7 +7,7 @@
     <div class="col-12 col-md-6 d-flex align-items-center justify-content-center">
       <div class="py-4 py-md-0 text-center text-md-left">
         <h3>Espacios Verdes</h3>
-        <p>Diseño, construcción, mantenimiento, riego, control fitosanitario, desmalezado, forestación.</p>
+        <p>Diseño, construcción, mantenimiento, corte de césped, desmalezado, desmonte, forestación, recolección y retiro de residuos verdes.</p>
       </div>
     </div>
   </div>
@@ -18,7 +18,7 @@
     <div class="col-12 col-md-6 d-flex align-items-center justify-content-center">
       <div class="py-4 py-md-0 text-center text-md-left">
         <h3>Podas</h3>
-        <p>Cercos perimetrales, podas de altura, talados, traslado de grandes ejemplares.</p>
+        <p>Extracción de árboles de todos los tamaños, podas de altura, cercos perimetrales, talados, traslado de grandes ejemplares, recolección y retiro de restos de poda.</p>
       </div>
     </div>
   </div>
@@ -40,7 +40,29 @@
     <div class="col-12 col-md-6 d-flex align-items-center justify-content-center">
       <div class="py-4 py-md-0 text-center text-md-left">
         <h3>Pinturas y pisos industriales</h3>
-        <p> Estructuras metálicas y de hormigón, tanques de almacenamiento, demarcación vial, piso con mortero de resina epoxi y poliuretano, piso con productos antiácidos y autonivelantes.</p>
+        <p> Pintura en general (látex, solvente, etc.), demarcación vial, estructuras metálicas y hormigón, tanques de almacenamiento, piso con mortero de resina epoxi y poliuretano, piso con productos antiácidos y autonivelantes.</p>
+      </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-12 col-md-6">
+      <img src="https://res.cloudinary.com/dmbom1kyl/image/upload/c_scale,w_549/v1623703065/garbo-fumigacion_gzzyjt.jpg" alt="">
+    </div>
+    <div class="col-12 col-md-6 d-flex align-items-center justify-content-center">
+      <div class="py-4 py-md-0 text-center text-md-left">
+        <h3>Fumigación/Control de plagas</h3>
+        <p>Control de roedores, fumigación contra mosquitos, desinfección, control fitosanitario.</p>
+      </div>
+    </div>
+  </div>
+  <div class="row flex-row-reverse">
+    <div class="col-12 col-md-6">
+      <img src="https://res.cloudinary.com/dmbom1kyl/image/upload/c_scale,w_581/v1623702913/garbo-001_qdnenn.jpg" alt="">
+    </div>
+    <div class="col-12 col-md-6 d-flex align-items-center justify-content-center">
+      <div class="py-4 py-md-0 text-center text-md-left">
+        <h3>Movimiento de suelo</h3>
+        <p>Servicio y alquiler de maquinaria como minicargador, pala cargadora frontal, pala retroexcavadora, motoniveladora y camión con volcadora.</p>
       </div>
     </div>
   </div>
