--- a/app/views/pages/_sponsors.html.erb
+++ b/app/views/pages/_sponsors.html.erb
@@ -28,6 +28,8 @@
           <div class="d-flex justify-content-center">
             <img class="bg-white" src="https://res.cloudinary.com/dmbom1kyl/image/upload/v1606742054/quillmes_azoy7c.png" alt="quilmes">
             <img class="bg-dark" src="https://res.cloudinary.com/dmbom1kyl/image/upload/v1606740434/Las_Rosas_vk2itu.png" alt="las_rosas">
+            <img src="https://res.cloudinary.com/dmbom1kyl/image/upload/v1623796557/logo-altercity_ilqu2j.png" alt="alter_city" class="bg-white">
+            <img src="https://res.cloudinary.com/dmbom1kyl/image/upload/c_scale,h_100,w_300/v1623799830/logo-atrio_mltsjn.png" alt="" style="object-fit: fill; "class="bg-dark p-4">
           </div>
         </div>
       </div>
@@ -49,6 +51,7 @@
         <li data-target="#carouselMobile" data-slide-to="2"></li>
         <li data-target="#carouselMobile" data-slide-to="3"></li>
         <li data-target="#carouselMobile" data-slide-to="4"></li>
+        <li data-target="#carouselMobile" data-slide-to="5"></li>
       </ol>
       <div class="carousel-inner">
         <div class="carousel-item active">
@@ -79,6 +82,12 @@
           <div class="d-flex justify-content-center">
             <img class="bg-white" src="https://res.cloudinary.com/dmbom1kyl/image/upload/v1606742054/quillmes_azoy7c.png" alt="quilmes">
             <img class="bg-dark" src="https://res.cloudinary.com/dmbom1kyl/image/upload/v1606740434/Las_Rosas_vk2itu.png" alt="las_rosas">
+          </div>
+        </div>
+        <div class="carousel-item">
+          <div class="d-flex justify-content-center">
+            <img src="https://res.cloudinary.com/dmbom1kyl/image/upload/v1623796557/logo-altercity_ilqu2j.png" alt="alter_city" class="bg-white">
+            <img src="https://res.cloudinary.com/dmbom1kyl/image/upload/c_scale,h_100,w_300/v1623799830/logo-atrio_mltsjn.png" alt="" style="object-fit: fill; "class="bg-dark p-4">
           </div>
         </div>
       </div>
