--- a/app/views/pages/_services.html.erb
+++ b/app/views/pages/_services.html.erb
@@ -57,7 +57,7 @@
   </div>
   <div class="row flex-row-reverse">
     <div class="col-12 col-md-6">
-      <img src="https://res.cloudinary.com/dmbom1kyl/image/upload/c_scale,w_581/v1623702913/garbo-001_qdnenn.jpg" alt="">
+      <img src="https://res.cloudinary.com/dye9yotct/image/upload/c_scale,w_800/v1625759552/Captura_de_Pantalla_2021-07-08_a_la_s_12.52.13_thugke.jpg" alt="">
     </div>
     <div class="col-12 col-md-6 d-flex align-items-center justify-content-center">
       <div class="py-4 py-md-0 text-center text-md-left">
