--- a/app/views/pages/_sponsors.html.erb
+++ b/app/views/pages/_sponsors.html.erb
@@ -6,13 +6,15 @@
         <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
         <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
         <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
       </ol>
+
       <div class="carousel-inner">
         <div class="carousel-item active">
           <div class="d-flex justify-content-center">
             <img src="https://res.cloudinary.com/dmbom1kyl/image/upload/v1606851467/0_uv3fwz.jpg" alt="di-bacco">
             <img src="https://res.cloudinary.com/dmbom1kyl/image/upload/v1605134286/0_hnqgqz.png" alt="cencosud">
-            <img src="https://res.cloudinary.com/dmbom1kyl/image/upload/c_scale,w_231/v1605134349/rmTlFwDq-9O5bLqtlv2BnYXaq2y9vKhbdOlae0QJ9HQgCMUF6Bvj3YSBoXja2dn6zhue0n4sMr4ye0dGF79whEb1BQ_s7ei2o.jpg" alt="grupo-bca">
+            <img src="https://res.cloudinary.com/dye9yotct/image/upload/v1656510018/PHOTO-2022-06-29-08-53-36_zy8yhe.jpg" alt="municipalidad yb">
             <img src="https://res.cloudinary.com/dmbom1kyl/image/upload/c_scale,w_190/v1605134506/belgrano_gcebat.jpg" alt="belgrano-cargas">
           </div>
         </div>
@@ -27,9 +29,15 @@
         <div class="carousel-item">
           <div class="d-flex justify-content-center">
             <img class="bg-white" src="https://res.cloudinary.com/dmbom1kyl/image/upload/v1606742054/quillmes_azoy7c.png" alt="quilmes">
-            <img class="bg-dark" src="https://res.cloudinary.com/dmbom1kyl/image/upload/v1606740434/Las_Rosas_vk2itu.png" alt="las_rosas">
+            <img src="https://res.cloudinary.com/dye9yotct/image/upload/v1656510018/PHOTO-2022-06-29-08-53-35_hu3gal.jpg" alt="shujman" class="bg-white">
             <img src="https://res.cloudinary.com/dmbom1kyl/image/upload/v1623796557/logo-altercity_ilqu2j.png" alt="alter_city" class="bg-white">
             <img src="https://res.cloudinary.com/dmbom1kyl/image/upload/c_scale,h_100,w_300/v1623799830/logo-atrio_mltsjn.png" alt="" style="object-fit: fill; "class="bg-dark p-4">
+          </div>
+        </div>
+        <div class="carousel-item">
+          <div class="d-flex justify-content-center">
+            <img src="https://res.cloudinary.com/dmbom1kyl/image/upload/c_scale,w_231/v1605134349/rmTlFwDq-9O5bLqtlv2BnYXaq2y9vKhbdOlae0QJ9HQgCMUF6Bvj3YSBoXja2dn6zhue0n4sMr4ye0dGF79whEb1BQ_s7ei2o.jpg" alt="grupo-bca">
+            <img class="bg-dark" src="https://res.cloudinary.com/dmbom1kyl/image/upload/v1606740434/Las_Rosas_vk2itu.png" alt="las_rosas">
           </div>
         </div>
       </div>
@@ -52,6 +60,7 @@
         <li data-target="#carouselMobile" data-slide-to="3"></li>
         <li data-target="#carouselMobile" data-slide-to="4"></li>
         <li data-target="#carouselMobile" data-slide-to="5"></li>
+        <li data-target="#carouselMobile" data-slide-to="6"></li>
       </ol>
       <div class="carousel-inner">
         <div class="carousel-item active">
@@ -68,7 +77,7 @@
         </div>
         <div class="carousel-item">
           <div class="d-flex justify-content-center">
-            <img src="https://res.cloudinary.com/dmbom1kyl/image/upload/c_scale,w_231/v1605134349/rmTlFwDq-9O5bLqtlv2BnYXaq2y9vKhbdOlae0QJ9HQgCMUF6Bvj3YSBoXja2dn6zhue0n4sMr4ye0dGF79whEb1BQ_s7ei2o.jpg" alt="grupo-bca">
+            <img src="https://res.cloudinary.com/dye9yotct/image/upload/v1656510018/PHOTO-2022-06-29-08-53-36_zy8yhe.jpg" alt="municipalidad yb">
             <img src="https://res.cloudinary.com/dmbom1kyl/image/upload/c_scale,w_190/v1605134506/belgrano_gcebat.jpg" alt="belgrano-cargas">
           </div>
         </div>
@@ -81,13 +90,19 @@
         <div class="carousel-item">
           <div class="d-flex justify-content-center">
             <img class="bg-white" src="https://res.cloudinary.com/dmbom1kyl/image/upload/v1606742054/quillmes_azoy7c.png" alt="quilmes">
-            <img class="bg-dark" src="https://res.cloudinary.com/dmbom1kyl/image/upload/v1606740434/Las_Rosas_vk2itu.png" alt="las_rosas">
+            <img src="https://res.cloudinary.com/dye9yotct/image/upload/v1656510018/PHOTO-2022-06-29-08-53-35_hu3gal.jpg" alt="shujman" class="bg-white">
           </div>
         </div>
         <div class="carousel-item">
           <div class="d-flex justify-content-center">
             <img src="https://res.cloudinary.com/dmbom1kyl/image/upload/v1623796557/logo-altercity_ilqu2j.png" alt="alter_city" class="bg-white">
             <img src="https://res.cloudinary.com/dmbom1kyl/image/upload/c_scale,h_100,w_300/v1623799830/logo-atrio_mltsjn.png" alt="" style="object-fit: fill; "class="bg-dark p-4">
+          </div>
+        </div>
+        <div class="carousel-item">
+          <div class="d-flex justify-content-center">
+            <img class="bg-dark" src="https://res.cloudinary.com/dmbom1kyl/image/upload/v1606740434/Las_Rosas_vk2itu.png" alt="las_rosas">
+            <img src="https://res.cloudinary.com/dmbom1kyl/image/upload/c_scale,w_231/v1605134349/rmTlFwDq-9O5bLqtlv2BnYXaq2y9vKhbdOlae0QJ9HQgCMUF6Bvj3YSBoXja2dn6zhue0n4sMr4ye0dGF79whEb1BQ_s7ei2o.jpg" alt="grupo-bca">
           </div>
         </div>
       </div>
