Add new changes to the website

--- a/app/views/pages/_posts.html.erb
+++ b/app/views/pages/_posts.html.erb
@@ -1,4 +1,4 @@
-<h2 class="py-5 py-md-6 text-center" id="page-title">Novedades</h2>
+<h2 class="py-5 py-md-6 text-center" id="page-title">Nuestras Obras</h2>
 <div class="container">
   <div class="container post-container">
     <% @posts.each do |post| %>
@@ -6,6 +6,6 @@
     <% end %>
   </div>
   <div class="text-center py-5">
-    <%= link_to "Más novedades", posts_path, class: "btn btn-success pt-2 px-4  mb-md-5 text-white"  %>
+    <%= link_to "Más Obras", posts_path, class: "btn btn-success pt-2 px-4  mb-md-5 text-white"  %>
   </div>
 </div>
