--- a/app/views/pages/_services.html.erb
+++ b/app/views/pages/_services.html.erb
@@ -2,7 +2,7 @@
 <div class="container">
   <div class="row">
     <div class="col-12 col-md-6">
-      <img src="https://res.cloudinary.com/dmbom1kyl/image/upload/c_scale,w_993/v1606851383/photo-1558904541-efa843a96f01_b5hlrb.jpg" alt="">
+      <img src="https://res.cloudinary.com/dw7ox75dg/image/upload/c_scale,w_500/v1703162910/espacio_verde.jpg" alt="">
     </div>
     <div class="col-12 col-md-6 d-flex align-items-center justify-content-center">
       <div class="py-4 py-md-0 text-center text-md-left">
@@ -13,7 +13,7 @@
   </div>
   <div class="row flex-row-reverse">
     <div class="col-12 col-md-6">
-      <img src="https://res.cloudinary.com/dmbom1kyl/image/upload/c_scale,w_668/v1605133022/man-using-chainsaw-to-cut-tree_pje7ak.jpg" alt="">
+      <img src="https://res.cloudinary.com/dw7ox75dg/image/upload/c_scale,w_600/v1703162910/podas.jpg" alt="">
     </div>
     <div class="col-12 col-md-6 d-flex align-items-center justify-content-center">
       <div class="py-4 py-md-0 text-center text-md-left">
@@ -35,12 +35,12 @@
   </div>
   <div class="row flex-row-reverse">
     <div class="col-12 col-md-6">
-      <img src="https://res.cloudinary.com/dmbom1kyl/image/upload/c_scale,w_1006/v1606740437/NIBERMA-Pinturas-y-resinas-para-suelos_uqme1w.jpg" alt="">
+      <img src="https://res.cloudinary.com/dye9yotct/image/upload/c_scale,w_800/v1625759552/Captura_de_Pantalla_2021-07-08_a_la_s_12.52.13_thugke.jpg" alt="">
     </div>
     <div class="col-12 col-md-6 d-flex align-items-center justify-content-center">
       <div class="py-4 py-md-0 text-center text-md-left">
-        <h3>Pinturas y pisos industriales</h3>
-        <p> Pintura en general (látex, solvente, etc.), demarcación vial, estructuras metálicas y hormigón, tanques de almacenamiento, piso con mortero de resina epoxi y poliuretano, piso con productos antiácidos y autonivelantes.</p>
+        <h3>Movimiento de suelo</h3>
+        <p>Servicio y alquiler de maquinaria como minicargador, pala cargadora frontal, pala retroexcavadora, motoniveladora y camión con volcadora.</p>
       </div>
     </div>
   </div>
@@ -55,15 +55,5 @@
       </div>
     </div>
   </div>
-  <div class="row flex-row-reverse">
-    <div class="col-12 col-md-6">
-      <img src="https://res.cloudinary.com/dye9yotct/image/upload/c_scale,w_800/v1625759552/Captura_de_Pantalla_2021-07-08_a_la_s_12.52.13_thugke.jpg" alt="">
-    </div>
-    <div class="col-12 col-md-6 d-flex align-items-center justify-content-center">
-      <div class="py-4 py-md-0 text-center text-md-left">
-        <h3>Movimiento de suelo</h3>
-        <p>Servicio y alquiler de maquinaria como minicargador, pala cargadora frontal, pala retroexcavadora, motoniveladora y camión con volcadora.</p>
-      </div>
-    </div>
-  </div>
+
 </div>
