--- a/app/views/pages/_sponsors.html.erb
+++ b/app/views/pages/_sponsors.html.erb
@@ -7,6 +7,7 @@
         <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
         <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
         <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
       </ol>
 
       <div class="carousel-inner">
@@ -38,6 +39,13 @@
           <div class="d-flex justify-content-center">
             <img src="https://res.cloudinary.com/dmbom1kyl/image/upload/c_scale,w_231/v1605134349/rmTlFwDq-9O5bLqtlv2BnYXaq2y9vKhbdOlae0QJ9HQgCMUF6Bvj3YSBoXja2dn6zhue0n4sMr4ye0dGF79whEb1BQ_s7ei2o.jpg" alt="grupo-bca">
             <img class="bg-dark" src="https://res.cloudinary.com/dmbom1kyl/image/upload/v1606740434/Las_Rosas_vk2itu.png" alt="las_rosas">
+            <img class="bg-white" src="https://res.cloudinary.com/dw7ox75dg/image/upload/v1703160815/logo_sirve.jpg" alt="" style="object-fit: fill;">
+            <img src="https://res.cloudinary.com/dw7ox75dg/image/upload/c_fit,w_400/v1703160298/a83b6f73-c44f-48c0-bde2-1c8b7f6ce1c2.jpg" alt="petroarsa">
+          </div>
+        </div>
+        <div class="carousel-item">
+          <div class="d-flex justify-content-center">
+            <img src="https://res.cloudinary.com/dw7ox75dg/image/upload/v1703160055/99106168-c902-4104-b4e6-61dbf27aecc5.jpg" alt="la_reserva">
           </div>
         </div>
       </div>
@@ -61,6 +69,8 @@
         <li data-target="#carouselMobile" data-slide-to="4"></li>
         <li data-target="#carouselMobile" data-slide-to="5"></li>
         <li data-target="#carouselMobile" data-slide-to="6"></li>
+        <li data-target="#carouselMobile" data-slide-to="7"></li>
+        <li data-target="#carouselMobile" data-slide-to="8"></li>
       </ol>
       <div class="carousel-inner">
         <div class="carousel-item active">
@@ -103,6 +113,17 @@
           <div class="d-flex justify-content-center">
             <img class="bg-dark" src="https://res.cloudinary.com/dmbom1kyl/image/upload/v1606740434/Las_Rosas_vk2itu.png" alt="las_rosas">
             <img src="https://res.cloudinary.com/dmbom1kyl/image/upload/c_scale,w_231/v1605134349/rmTlFwDq-9O5bLqtlv2BnYXaq2y9vKhbdOlae0QJ9HQgCMUF6Bvj3YSBoXja2dn6zhue0n4sMr4ye0dGF79whEb1BQ_s7ei2o.jpg" alt="grupo-bca">
+          </div>
+        </div>
+        <div class="carousel-item">
+          <div class="d-flex justify-content-center">
+            <img class="bg-white" src="https://res.cloudinary.com/dw7ox75dg/image/upload/v1703160815/logo_sirve.jpg" alt="" style="object-fit: fill;">
+            <img src="https://res.cloudinary.com/dw7ox75dg/image/upload/c_fit,w_400/v1703160298/a83b6f73-c44f-48c0-bde2-1c8b7f6ce1c2.jpg" alt="petroarsa">
+          </div>
+        </div>
+        <div class="carousel-item">
+          <div class="d-flex justify-content-center">
+            <img src="https://res.cloudinary.com/dw7ox75dg/image/upload/v1703160055/99106168-c902-4104-b4e6-61dbf27aecc5.jpg" alt="la_reserva">
           </div>
         </div>
       </div>
