--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
-<div class="main-banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://res.cloudinary.com/dmbom1kyl/image/upload/c_fill,w_2076/v1606851210/photo-1559721849-947ab8ad1ced_ms5m3k.jpg);">
+<div class="main-banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://res.cloudinary.com/dw7ox75dg/image/upload/v1703170258/motoguadanas-1024x683.jpg);">
   <div class="container text-center">
     <img src="https://res.cloudinary.com/san-patricio/image/upload/c_scale,w_920/v1603753433/Logo_Garbo_Negativo_f3nack.png" alt="">
     <div class="d-flex justify-content-center banner-btn">
@@ -15,12 +15,6 @@
 </section>
 <section id="posts">
   <%= render 'posts' %>
-</section>
-<section id="company">
-  <%= render 'company' %>
-</section>
-<section id="carousel">
-  <%= render 'carousel' %>
 </section>
 <section id="contact">
   <%= render 'contacts/new' %>
