--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -77,6 +77,7 @@
 @media (max-width: 567.98px) {
   .main-banner {
     background-size: cover;
+    background-position: bottom;
     padding-top: 200px;
     padding-bottom: 200px;
 
