--- a/app/views/pages/_company.html.erb
+++ b/app/views/pages/_company.html.erb
@@ -2,7 +2,7 @@
   <h2 class="text-center pt-5 pt-md-6 pb-5" id="page-title">La Empresa</h2>
   <div class="px-4 px-lg-8 pb-6 container">
     <p>
-      <strong>GARBO S.A.S.</strong> es una empresa radicada en Tucumán que brinda servicios en toda la región NOA, nos dedicamos a los servicios de espacios verdes, podas, pinturas y pisos industriales, limpieza,
+      <strong>GARBO S.A.S.</strong> es una empresa radicada en Tucumán que brinda servicios en toda la región NOA, nos dedicamos a los servicios de espacios verdes, podas, limpieza,
       fumigación y movimiento de suelo.<br>Estamos orientados a brindar nuestros servicios a empresas, plantas industriales, organismos públicos, countries y barrios privados, clubes, instituciones educativas, oficinas, centros comerciales y espacios públicos.<br>Contamos con un equipo calificado que sumado a la maquinaria y las herramientas de última tecnología nos permiten ser eficientes y prolijos en las tareas a realizar, de modo tal de brindar servicios con un alto grado de calidad a nuestros clientes. Tenemos la flexibilidad para, dependiendo de cada cliente, dar las soluciones adecuadas a sus necesidades y sabemos de la importancia que tienen los detalles en la realización de los servicios que ofrecemos.<br>Creemos profundamente que la seriedad y el compromiso con los proyectos que tomamos son
       las claves del continuo crecimiento que hemos experimentado.
     </p>
