--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -16,6 +16,9 @@
 <section id="posts">
   <%= render 'posts' %>
 </section>
+<section id="company">
+  <%= render 'company' %>
+</section>
 <section id="contact">
   <%= render 'contacts/new' %>
 </section>
