Change image position

--- a/app/views/pages/_services.html.erb
+++ b/app/views/pages/_services.html.erb
@@ -13,7 +13,7 @@
   </div>
   <div class="row flex-row-reverse">
     <div class="col-12 col-md-6">
-      <img src="https://res.cloudinary.com/dw7ox75dg/image/upload/c_scale,w_600/v1703162910/podas.jpg" alt="">
+      <img src="https://res.cloudinary.com/dw7ox75dg/image/upload/c_scale,w_600/v1703162910/podas.jpg" alt="" style="object-position: 50% 70%;">
     </div>
     <div class="col-12 col-md-6 d-flex align-items-center justify-content-center">
       <div class="py-4 py-md-0 text-center text-md-left">
