Add new fotos to service and sponsors

--- a/app/views/pages/_services.html.erb
+++ b/app/views/pages/_services.html.erb
@@ -2,7 +2,7 @@
 <div class="container">
   <div class="row">
     <div class="col-12 col-md-6">
-      <img src="https://res.cloudinary.com/dw7ox75dg/image/upload/c_scale,w_500/v1703162910/espacio_verde.jpg" alt="">
+      <img src="https://res.cloudinary.com/dw7ox75dg/image/upload/c_fit,h_800,w_1200/v1724175367/119b46e7-5b57-4644-8a9b-b19bb1ebc9c2.jpg" alt="">
     </div>
     <div class="col-12 col-md-6 d-flex align-items-center justify-content-center">
       <div class="py-4 py-md-0 text-center text-md-left">
@@ -24,7 +24,7 @@
   </div>
   <div class="row">
     <div class="col-12 col-md-6">
-      <img src="https://res.cloudinary.com/dmbom1kyl/image/upload/v1606851119/barrido-calles_lgi7di.jpg" alt="">
+      <img src="https://res.cloudinary.com/dw7ox75dg/image/upload/v1724176564/c79f6d9e-d485-4f98-9200-51aaf2965725.jpg" alt="" style="object-position: 56% 48%;">
     </div>
     <div class="col-12 col-md-6 d-flex align-items-center justify-content-center">
       <div class="py-4 py-md-0 text-center text-md-left">
