--- a/app/views/pages/_sponsors.html.erb
+++ b/app/views/pages/_sponsors.html.erb
@@ -46,6 +46,8 @@
         <div class="carousel-item">
           <div class="d-flex justify-content-center">
             <img src="https://res.cloudinary.com/dw7ox75dg/image/upload/v1703160055/99106168-c902-4104-b4e6-61dbf27aecc5.jpg" alt="la_reserva">
+            <img src="https://res.cloudinary.com/dw7ox75dg/image/upload/v1724175365/17e948d9-a863-4a80-a63e-4783d9843799.jpg" alt="super-cemento">
+            <img src="https://res.cloudinary.com/dw7ox75dg/image/upload/v1724175365/b08c2357-796b-4026-9509-506c1f3ae3c9.jpg" alt="lesco">
           </div>
         </div>
       </div>
@@ -71,6 +73,7 @@
         <li data-target="#carouselMobile" data-slide-to="6"></li>
         <li data-target="#carouselMobile" data-slide-to="7"></li>
         <li data-target="#carouselMobile" data-slide-to="8"></li>
+        <li data-target="#carouselMobile" data-slide-to="9"></li>
       </ol>
       <div class="carousel-inner">
         <div class="carousel-item active">
@@ -123,7 +126,13 @@
         </div>
         <div class="carousel-item">
           <div class="d-flex justify-content-center">
+            <img src="https://res.cloudinary.com/dw7ox75dg/image/upload/v1724175365/b08c2357-796b-4026-9509-506c1f3ae3c9.jpg" alt="lesco" style="object-fit: fill;">
             <img src="https://res.cloudinary.com/dw7ox75dg/image/upload/v1703160055/99106168-c902-4104-b4e6-61dbf27aecc5.jpg" alt="la_reserva">
+          </div>
+        </div>
+        <div class="carousel-item">
+          <div class="d-flex justify-content-center">
+            <img class="bg-white" src="https://res.cloudinary.com/dw7ox75dg/image/upload/v1724175365/17e948d9-a863-4a80-a63e-4783d9843799.jpg" alt="super-cemento" style="object-fit: fill;">
           </div>
         </div>
       </div>
