Add new photo to service

--- a/app/views/pages/_services.html.erb
+++ b/app/views/pages/_services.html.erb
@@ -2,7 +2,7 @@
 <div class="container">
   <div class="row">
     <div class="col-12 col-md-6">
-      <img src="https://res.cloudinary.com/dw7ox75dg/image/upload/c_fit,h_800,w_1200/v1724175367/119b46e7-5b57-4644-8a9b-b19bb1ebc9c2.jpg" alt="">
+      <img src="https://res.cloudinary.com/dw7ox75dg/image/upload/c_scale,w_500/v1703162910/espacio_verde.jpg" alt="">
     </div>
     <div class="col-12 col-md-6 d-flex align-items-center justify-content-center">
       <div class="py-4 py-md-0 text-center text-md-left">
